# VirtualMethodsExample

./: .clang-format  CMakeLists.txt  README.MD
apps/: CMakeLists.txt  app.cpp
include/virtual/: example.h
src/: CMakeLists.txt
src/virtual/: example.cpp
